Add canvas autoscaling and disable refractions

--- a/metaballs.html
+++ b/metaballs.html
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body>
-    <canvas id="canvas" width="800px" height="600px"></canvas>
+    <canvas id="canvas"></canvas>
 
     <script src="vendor/gl-matrix-min.js"></script>
     <script src="utils.js"></script>
