Reorganize sources a bit

--- a/basic_1.html
+++ b/basic_1.html
@@ -9,6 +9,10 @@
     <canvas id="canvas" width="800px" height="600px"></canvas>
 
     <script src="utils.js"></script>
-    <script src="basic_1.js"></script>
+    <script>
+      'use strict';
+
+      initGL();
+    </script>
   </body>
 </html>
