Add photofx POC

--- a/photofx.html
+++ b/photofx.html
@@ -4,32 +4,24 @@
     <title>OpenGL Tutorials</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
-    <style>
-      html, body {
-        overflow: hidden;
-      }
-
-      #canvas {
-        width: 100vw;
-        height: 100vh;
-      }
-    </style>
   </head>
   <body>
     <canvas id="canvas" width="800px" height="600px"></canvas>
+    <input type="file" id="image" />
 
-    <script src="vendor/gl-matrix-min.js"></script>
     <script src="utils.js"></script>
     <script>
       'use strict';
 
+      document.getElementById('image').onchange = changeImage;
+
       const gl = initGL();
 
       const triangleData = new Float32Array([
-        -1.0, -1.0, 0.0,
-        1.0, -1.0, 0.0,
-        -1.0, 1.0, 0.0,
         1.0, 1.0, 0.0,
+        -1.0, 1.0, 0.0,
+        1.0, -1.0, 0.0,
+        -1.0, -1.0, 0.0,
       ]);
 
       const buffer = gl.createBuffer();
@@ -37,28 +29,29 @@
       gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
       gl.bufferData(gl.ARRAY_BUFFER, triangleData.buffer, gl.STATIC_DRAW);
 
-      let cubeTexture, cubeImage;
+      let sampleTextureId, sampleImage;
 
-      initTextures();
-
-      function initTextures() {
-        cubeTexture = gl.createTexture();
-        cubeImage = new Image();
-        cubeImage.crossOrigin = 'anonymous';
-        cubeImage.onload = function() { handleTextureLoaded(cubeImage, cubeTexture); }
-        cubeImage.src = 'assets/textures/envmap1.jpg';
+      function changeImage(event) {
+        const reader = new FileReader();
+        reader.onload = function(event) {
+          sampleImage = new Image();
+          sampleImage.onload = function() {
+            console.info('Image loaded...');
+            // TODO: Resize to power of 2
+            sampleTextureId = gl.createTexture();
+            gl.bindTexture(gl.TEXTURE_2D, sampleTextureId);
+            gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, sampleImage);
+            gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MAG_FILTER, gl.LINEAR);
+            gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR_MIPMAP_NEAREST);
+            gl.generateMipmap(gl.TEXTURE_2D);
+            gl.bindTexture(gl.TEXTURE_2D, null);
+          }
+          sampleImage.src = event.target.result;
+        };
+        reader.readAsDataURL(event.target.files[0]);
       }
 
-      function handleTextureLoaded(image, texture) {
-        gl.bindTexture(gl.TEXTURE_2D, texture);
-        gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, image);
-        gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MAG_FILTER, gl.LINEAR);
-        gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR_MIPMAP_NEAREST);
-        gl.generateMipmap(gl.TEXTURE_2D);
-        // gl.bindTexture(gl.TEXTURE_2D, null);
-      }
-
-      loadProgram(gl, 'shaders/passthrough.vsh', 'shaders/sdf-metaballs.fsh')
+      loadProgram(gl, 'shaders/passthrough.vsh', 'shaders/holgaart.fsh')
         .then((program) => {
           const aPosition = gl.getAttribLocation(program, 'aPosition');
           const uTime = gl.getUniformLocation(program, 'uTime');
@@ -74,7 +67,10 @@
             gl.enableVertexAttribArray(aPosition);
             gl.vertexAttribPointer(0, 3, gl.FLOAT, false, 0, 0);
             gl.uniform1f(uTime, time);
-            gl.uniform1i(uSampler, cubeTexture);
+            if (sampleTextureId) {
+              gl.bindTexture(gl.TEXTURE_2D, sampleTextureId);
+              gl.uniform1i(uSampler, sampleTextureId);
+            }
             gl.uniform2fv(uResolution, [800, 600]);
             gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
             gl.disableVertexAttribArray(aPosition);
