--- a/phong.html
+++ b/phong.html
@@ -9,6 +9,7 @@
     <canvas id="canvas" width="800px" height="600px"></canvas>
 
     <script src="vendor/gl-matrix-min.js"></script>
+    <script src="math.js"></script>
     <script src="utils.js"></script>
     <script>
       'use strict';
