Add VSM shadows sample

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <li class="menu-group">Lighting</li>
       <li><a target="canvasFrame" href="/canvas?./samples/phong.js">Phong shading</a></li>
       <li><a target="canvasFrame" href="/canvas?./samples/spotlight.js">Shadow maps: Spotlight</a></li>
+      <li><a target="canvasFrame" href="/canvas?./samples/vsm_shadowmapping.js">Shadow maps: VSM</a></li>
 
       <li class="menu-group">Misc</li>
       <li><a target="canvasFrame" href="/canvas?./samples/metaballs.js">Metaballs</a></li>
