--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 
     <ul class="menu">
       <li class="menu-group">Basic</li>
-      <li><a target="canvasFrame" href="/canvas?./samples/basic_1.js">Init</a></li>
-      <li><a target="canvasFrame" href="/canvas?./samples/basic_2.js">Triangle</a></li>
-      <li><a target="canvasFrame" href="/canvas?./samples/basic_3.js">Perspective</a></li>
-      <li><a target="canvasFrame" href="/canvas?./samples/basic_4.js">Custom attributes</a></li>
+      <li><a target="canvasFrame" href="./canvas?./samples/basic_1.js">Init</a></li>
+      <li><a target="canvasFrame" href="./canvas?./samples/basic_2.js">Triangle</a></li>
+      <li><a target="canvasFrame" href="./canvas?./samples/basic_3.js">Perspective</a></li>
+      <li><a target="canvasFrame" href="./canvas?./samples/basic_4.js">Custom attributes</a></li>
 
       <li class="menu-group">Lighting</li>
-      <li><a target="canvasFrame" href="/canvas?./samples/phong.js">Phong shading</a></li>
-      <li><a target="canvasFrame" href="/canvas?./samples/spotlight.js">Shadow maps: Spotlight</a></li>
-      <li><a target="canvasFrame" href="/canvas?./samples/vsm_shadowmapping.js">Shadow maps: VSM</a></li>
+      <li><a target="canvasFrame" href="./canvas?./samples/phong.js">Phong shading</a></li>
+      <li><a target="canvasFrame" href="./canvas?./samples/spotlight.js">Shadow maps: Spotlight</a></li>
+      <li><a target="canvasFrame" href="./canvas?./samples/vsm_shadowmapping.js">Shadow maps: VSM</a></li>
 
       <li class="menu-group">Misc</li>
-      <li><a target="canvasFrame" href="/canvas?./samples/metaballs.js">Metaballs</a></li>
-      <li><a target="canvasFrame" href="/canvas?./samples/photofx.js">Photo FX</a></li>
+      <li><a target="canvasFrame" href="./canvas?./samples/metaballs.js">Metaballs</a></li>
+      <li><a target="canvasFrame" href="./canvas?./samples/photofx.js">Photo FX</a></li>
     </ul>
   </nav>
 
