Add basic deferred renderer
Lighting is calculated just like in usual forward renderer. But at least now it's easier to experiment with screen space effects.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       <li><a target="canvasFrame" href="./canvas?./samples/spotlight.js">Shadow maps: Spotlight</a></li>
       <li><a target="canvasFrame" href="./canvas?./samples/vsm_shadowmapping.js">Shadow maps: VSM</a></li>
 
+      <li class="menu-group">Rendering</li>
+      <li><a target="canvasFrame" href="./canvas?./samples/deferred.js">Basic deferred renderer</a></li>
+
       <li class="menu-group">Misc</li>
       <li><a target="canvasFrame" href="./canvas?./samples/metaballs.js">Metaballs</a></li>
       <li><a target="canvasFrame" href="./canvas?./samples/photofx.js">Photo FX</a></li>
