Add PCSS thing to the index

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li><a target="canvasFrame" href="./canvas?./samples/phong.js">Phong shading</a></li>
       <li><a target="canvasFrame" href="./canvas?./samples/spotlight.js">Shadow maps: Spotlight</a></li>
       <li><a target="canvasFrame" href="./canvas?./samples/vsm_shadowmapping.js">Shadow maps: VSM</a></li>
+      <li><a target="canvasFrame" href="./canvas?./samples/pcss_shadowmapping.js">Shadow maps: PCSS</a></li>
 
       <li class="menu-group">Rendering</li>
       <li><a target="canvasFrame" href="./canvas?./samples/deferred.js">Basic deferred renderer</a></li>
